# Robot-Hands

./: .gitignore  LICENSE.txt  README.md  index.html  params.json
Assembly Guide/tex/: Appendix1.tex  Appendix2.tex  Appendix3.tex  Appendix4.tex  Description.tex  OpenBionics_RobotHandsGuide2015.tex  Ref.bib
CAD/: .gitignore  FabricationParameters.SLDPRT  README.md  RobotHandParameters.SLDPRT
CAD/3D_Model/: 4-finger_v1.SLDASM  Differential_Disk.SLDPRT  Finger_2-phalanges.SLDASM  Finger_Base_1.SLDPRT  Finger_Base_2.SLDPRT  Finger_DIP.SLDPRT  Finger_PIP.SLDPRT  Joint_1.SLDPRT  M3x20.SLDPRT  Palm_top_plate.SLDPRT  plastic_spacer.SLDPRT  pulley.SLDPRT  tube_DIP_1.SLDPRT
CAD/3d Printed/: RobotHand.SLDASM
CAD/Assembly/: RobotHand_AX12.dwg  RobotHand_stdServo.dwg
CAD/Common Parts/: 90666A131 - ScrewM6L12LowProfile.SLDPRT  90965A130 - WasherM3.SLDPRT  91290A123 - ScrewM3L20.SLDPRT  91292A114 - ScrewM3L12.SLDPRT  91292A195 - ScrewM5L45.SLDPRT  91292A831 - ScrewM2L6.SLDPRT  91292A832 - ScrewM2L8.SLDPRT  91292A833 - ScrewM2L10.SLDPRT  91828A241 - NutM5.SLDPRT  92290A113 - ScrewM3L8.SLDPRT  92290A115 - M3 L10 .SLDPRT  AX12.SLDASM  (+24 more)
CAD_Files/: README.md
Electronics/: Arduino_Micro.lbr  OpenBionics.lbr  README.md  README.md~
Hardware/: README.md
Software/: README.md
Software/ROS/OpenBionicsROS/: CMakeLists.txt  package.xml
Software/ROS/OpenBionicsROS/scripts/: Main.py  robotHand.py
Software/ROS/OpenBionicsROS/srv/: hand.srv~
Software/ROS/openbionics/: CMakeLists.txt  HandAX12.launch  RobotHand.launch  package.xml  stdServo.launch
Software/ROS/openbionics/msg/: Acknowledge.msg  Command.msg  EMGValues.msg  MotorState.msg
Software/ROS/openbionics/scripts/: Main.py  RobotHand.py  SliderBox.py  emg.py  publisher.py  robotFinger.py  robotHand.py  stdServo.py
Software/ROS/openbionics/srv/: Finger.srv  HandAX12.srv  stdServo.srv
(+425 files in other folders)
